# ac215-project

./: .gitignore  README.md  Trying_to_pull_data.ipynb
EDA_notebooks/: EDA_environment.yml  Trying_to_pull_data.ipynb  llm_hello_world.ipynb  temp_bigquery_access_test.ipynb  tempnotebook.ipynb  vitaldb.ipynb  wandb.ipynb
data_acquisition/: notes.md
data_acquisition/clinic_table/: main.py  requirements.txt
data_acquisition/hemodyn_table/: main.py  requirements.txt
data_acquisition/lab_table/: main.py  requirements.txt
dataflow/: core_clinic.py  core_hemodyn.py  core_lab.py  core_pipeline.py  local_test.py  requirements.txt
dataflow/tests/: test_remote_env.py
docs/: data_sources.md
dosewise-model/: Dockerfile  app.py  prototype.ipynb  pyproject.toml  requirements.txt
model_container/: Dockerfile  README.md  TRAINING_GUIDE.md  check_bigquery.py  demo_training.py  docker.sh  kaylee_model_prototype.ipynb  main.py  pyproject.toml
model_container/markdown/: DEMO_RESULTS.md  MODEL_SUMMARY.md
model_container/old_code/: Dockerfile  demo_inference.py  docker.sh  inference.py  main.py  model.py  scaler.pkl  test_model.py
model_container/tests/: check_bigquery.py
model_inference/: Dockerfile  inference.py  pyproject.toml
