[project]
name = "model-container"
version = "0.1.0"
description = "DoseWise: Counterfactual time series prediction for drug dosage effects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gcsfs>=2025.9.0",
    "google-cloud-storage>=3.4.0",
    "google-cloud-bigquery>=3.11.0",
    "pandas>=2.3.3",
    "pyarrow==21.0.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
]
